--- a/redhead/CMakeLists.txt
+++ b/redhead/CMakeLists.txt
@@ -71,10 +71,14 @@ add_message_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
+
+catkin_package(
+   CATKIN_DEPENDS message_runtime
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
