--- a/redhead/CMakeLists.txt
+++ b/redhead/CMakeLists.txt
@@ -51,6 +51,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
   FILES
   Move.msg
+  MoveRC.msg
   Ultra.msg
   April.msg
   Mpu.msg
